# Specula

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  PR_Optimization_Security.md  README.md  README_modes.md  SpinLock.cfg  TLA+Parser.md  config.yaml  gemini_config.yaml  pyproject.toml  requirements.txt  ruff.toml  specula  test_performance_fixes.py  test_security_fixes.py  tlagen
.github/workflows/: ci.yml  triple-check.yml
archive/: run_pipeline.sh
archive/data/: example_input.yaml
archive/prompts/: step0_draft_generation.txt  step1_code_translation.txt  step1_code_translation_with_draft.txt  step3_config_generation.txt  step4_runtime_correction.txt
data/: baseline_prompt.txt  rag_prompt.txt
data/scripts/: validate.sh
demo/etcd/: commands.txt
docs/: CFA.md  LOGGING_IMPROVEMENT_PLAN.md  TRACE_VALIDATION_GUIDE.md  Usage.md  false_positive_analysis.md
examples/config/: claude_config.yaml  deepseek_config.yaml  gpt5_config.yaml
examples/etcd/: README.md
experiments/syntax_phase/: run_workflow_comparison.py
output/: Increment_transformed.tla  corrected_Action.tla  etcd_transformed.tla  stats.json
output/example_input_actions/: Action.tla  AddToQueue.tla  Increment.tla  ProcessQueue.tla
phase_2_cfa_transformation/: pom.xml  run.sh
phase_2_cfa_transformation/output/: test_output.tla
phase_3_rag_correction/: README.md  USAGE.md  config.yaml  main.py  requirements.txt
phase_3_rag_correction/knowledge_base/: initial_errors.json
phase_3_rag_correction/output/: stats.json
phase_3_rag_correction/src/: action_completion.py  config.py  llm_client.py  processor.py
scripts/: clean_trace.sh  launch_code_analysis.sh  launch_harness_generation.sh  launch_pipeline.sh  launch_review.sh  launch_spec_generation.sh  launch_spec_validation.sh  parse_tlc_log.py  quality_gate_check.py  run_model_check.sh  run_random_tests.py  setup.sh  start_background.sh  tlc_coverage.py  validate.sh
scripts/adapters/: claude-code.sh  codex.sh
scripts/exp/: scheduler.sh  schedulerlib.py  tasks-spdm-r1.queue  tasks-spdm-r2.queue  tasks-spdm-r3.queue  tasks.queue  usage.sh
scripts/infra/: clean_states.sh  copilot_mcp.sh  record_bug.py  run_model_check.sh  setup.sh  setup_codex_plugin.py  start_background.sh  wait_for_pid.sh  wait_for_tlc.sh  watchdog_stuck_loops.sh
scripts/launch/: launch_bug_classification.sh  launch_bug_confirmation.sh  launch_code_analysis.sh  launch_harness_generation.sh  launch_pipeline.sh  launch_review.sh  launch_spec_generation.sh  launch_spec_validation.sh  phaselib.py  pipelinelib.py
scripts/tlc/: PrintAvailableProcessors.java  parse_tlc_log.py  run_model_check.sh  tlc_coverage.py  validate.sh
skills/: workflow-overview.md
skills/bug-classification/: SKILL.md  guide.md
skills/bug-confirmation/: SKILL.md  guide.md
skills/bug_recording/: SKILL.md  guide.md
skills/code_analysis/: SKILL.md  guide.md
skills/harness-generation/: SKILL.md  guide.md
skills/spec_generation/: SKILL.md  guide.md
skills/tla-checking-workflow/: SKILL.md  guide.md
skills/tla-trace-workflow/: SKILL.md  guide.md
skills/validation-workflow/: SKILL.md  guide.md
skills/writing-prompt-extra/: SKILL.md  guide.md
src/: __main__.py  cli.py  phase1_generator.py  requirements.txt
src/agent/: __init__.py  claude_agent_sdk.py
src/core/: README_runtime_corrector.md  __init__.py  autosave.py  combined_step4.py  iispec_generator.py  instrumentation.py  processor.py  raft_state_machine_runner.py  runtime_corrector.py  spec_normalizer.py  spectrace_generator.py  trace_generator.py
src/generators/: __init__.py
src/harness_generator/: __init__.py  harness_generator.py
src/llm/: client.py
src/omnicode_generator/: __init__.py  omnicode_generator.py
src/prompts/: step0_draft_generation.txt  step1_code_translation.txt  step1_code_translation_with_draft.txt  step1_error_correction.txt  step1_error_correction_summary.txt  step2_config_generation.txt  step2_error_correction.txt  step2_spec_normalization.txt  step3_runtime_correction.txt  step4_runtime_correction.txt  step4_trace_config_generation.txt  step5_trace_config_generation.txt
src/rag/: initial_errors.json  retriever.py
src/specula/: __init__.py  activity.py  agent_registry.py  cli.py  confirmlib.py  phaselib.py  (+9 more)
templates/: README.md
tests/: README.md  __init__.py  conftest.py  test_system.py
(+1587 files in other folders)
